# WatchdogService

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  WatchdogService.pro  build .sh  build.bat
cmake/: CompilerWarnings.cmake  GenerateVersion.cmake
include/: version.h.in
src/: CMakeLists.txt
src/include/: Logger.h  service_install.h  watchdog_service.h
src/source/: Logger.cpp  service_install.cpp  watchdog_service.cpp
